first exercise corrections